# mcre

./: .gitignore  .typos.toml  Cargo.toml  README.md  flake.nix  justfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
crates/mcje/: Cargo.toml  build.rs
crates/mcje/src/: lib.rs
crates/mcje_macros/: Cargo.toml
crates/mcje_macros/src/: lib.rs
crates/mcre/: Cargo.toml
crates/mcre/src/: camera.rs  chunk.rs  chunk_map.rs  main.rs  player.rs  textures.rs
crates/mcre/src/chunk/: asset.rs  loader.rs  mesh.rs  mod.rs
crates/mcre/src/chunk/generate/: mod.rs  rng.rs
crates/mcre/src/chunk/math/: pos.rs  size.rs
crates/mcre/src/interaction/: block_breaking.rs  block_placing.rs  mod.rs  raycasting.rs
crates/mcre/src/ui/: crosshair.rs  load.rs  mod.rs
crates/mcre/src/ui/debug/: camera.rs  chunk.rs  mod.rs  targeted_block.rs  title.rs
crates/mcre_assets/: Cargo.toml  build.rs
crates/mcre_assets/src/: blockstates.rs  id.rs  lib.rs
crates/mcre_assets/src/blockstates/: baked.rs  mod.rs  unbaked.rs
crates/mcre_assets/src/models/: block.rs
crates/mcre_core/: Cargo.toml
crates/mcre_core/src/: axis.rs  blockpos.rs  lib.rs  state.rs  vec.rs  vec3i.rs
crates/mcre_core/src/data/: fields.rs  mod.rs  props.rs
crates/mcre_core/src/data/block/: all.rs  consts.rs  mod.rs
crates/mcre_core/src/data/block/data/: default_state.rs  default_state_id.rs  display_name.rs  fields_present.rs  max_state.rs  max_state_id.rs  min_state.rs  min_state_id.rs  mod.rs  name.rs
crates/mcre_core/src/data/state/: enums.rs  mod.rs
crates/mcre_core/src/data/state/data/: block.rs  block_id.rs  can_occlude.rs  destroy_speed.rs  ignited_by_lava.rs  is_air.rs  is_randomly_ticking.rs  light_block.rs  light_emission.rs  max_horizontal_offset.rs  max_vertical_offset.rs  mod.rs  offset_type.rs  propagates_skylight_down.rs  replaceable.rs  requires_correct_tool_for_drops.rs  solid_render.rs  spawn_terrain_particles.rs  use_shape_for_light_occlusion.rs
crates/mcre_core/src/data/state/data/fields/: age.rs  attachment.rs  axis.rs  bites.rs  candles.rs  charges.rs  chest_type.rs  comparator_mode.rs  copper_golem_pose.rs  creaking_heart_state.rs  delay.rs  distance.rs  doubleblock_half.rs  dusted.rs  eggs.rs  face.rs  facing.rs  flower_amount.rs  half.rs  hatch.rs  hinge.rs  honey_level.rs  hydration.rs  instrument.rs  is_attached.rs  is_berries.rs  is_bloom.rs  is_bottom.rs  is_can_summon.rs  is_conditional.rs  is_cracked.rs  is_crafting.rs  is_disarmed.rs  is_down.rs  is_drag.rs  is_east.rs  is_enabled.rs  is_extended.rs  is_eye.rs  is_hanging.rs  (+67 more)
crates/mcre_core/src/random/: legacy.rs  mod.rs  weighted_list.rs
crates/mcre_data/: Cargo.toml  blocks.json
crates/mcre_data/src/: block.rs  state.rs
crates/mcre_fs/: Cargo.toml
crates/mcre_fs/src/: error.rs  lib.rs  native.rs  path.rs  web.rs
crates/mcre_resource_pack/: Cargo.toml
crates/mcre_resource_pack/src/: error.rs  lib.rs  pack.rs  repo.rs
tasks/core_gen/: Cargo.toml
tasks/core_gen/src/: analyzer.rs  main.rs
tasks/core_gen/src/generators/: fields.rs  mod.rs  props.rs  root.rs
tasks/core_gen/src/generators/block/: mod.rs
tasks/core_gen/src/generators/block/data/: mod.rs
tasks/core_gen/src/generators/common/: mod.rs  multi_byte.rs  string.rs  sub_byte.rs
tasks/core_gen/src/generators/state/: enums.rs  mod.rs
tasks/core_gen/src/generators/state/data/: fields.rs  mod.rs
tasks/data_gen/: Cargo.toml
tasks/data_gen/src/: main.rs
tasks/data_generator/: Cargo.toml  build.rs
tasks/data_generator/src/: main.rs
tasks/static_data_generator/: Cargo.toml
tasks/static_data_generator/src/: main.rs
