[workspace]
resolver = "3"
members = ["crates/*", "tasks/*"]

[workspace.package]
authors = ["Dilshad <a-rustacean@outlook.com>"]
categories = ["games"]
homepage = "https://github.com/mcre-project/mcre"
keywords = ["Minecraft", "Voxel"]
license = "MIT"
repository = "https://github.com/mcre-project/mcre"
description = "A minecraft clone written in Rust."

edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
mcre_core        = { version = "0.1.0", path = "crates/mcre_core" }
mcre_data        = { version = "0.1.0", path = "crates/mcre_data" }
mcre_assets      = { version = "0.1.0", path = "crates/mcre_assets" }
mcre_static_data = { version = "0.1.0", path = "crates/mcre_static_data" }

mcje            = { version = "0.1.0", path = "crates/mcje" }
mcje_macros     = { version = "0.1.0", path = "crates/mcje_macros" }
mcje_downloader = { version = "0.1.0", path = "crates/mcje_downloader" }

serde        = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json   = { version = "1", default-features = false, features = ["alloc"] }
indexmap     = { version = "2", default-features = false, features = ["serde"] }
hashbrown    = { version = "0.16", default-features = false, features = ["serde"] }
rustc-hash   = { version = "2", default-features = false }
tokio        = { version = "1", features = ["full"] }
chrono       = { version = "0.4", features = ["serde"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
url          = { version = "2", features = ["serde"] }
futures-core = "0.3"
bytes        = "1"
zip          = "6"

java-locator = "0.1"
jni          = { version = "0.21", features = ["invocation"] }

syn          = { version = "2.0", features = ["full"] }
quote        = "1"
proc-macro2  = "1"
convert_case = "0.10"
prettyplease = "0.2"

[workspace.metadata.cargo-shear]
ignored = ["mcre_assets", "mcre_static_data"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
