[package]
name = "mcje"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mcje_macros     = { workspace = true }
mcje_downloader = { workspace = true }

tokio = { workspace = true }

java-locator = { workspace = true }
jni          = { workspace = true }

[build-dependencies]
java-locator = { workspace = true }
