[package]
name = "mcje_macros"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn         = { workspace = true }
quote       = { workspace = true }
