[package]
name = "mcre"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bevy = "0.17.3"
mcre_core = { path = "../mcre_core/" }
