[package]
name = "mcre_data"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
mcre_core = { workspace = true }

serde      = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
indexmap   = { workspace = true, features = ["std"] }

tokio = { workspace = true }

[dev-dependencies]
mcje = { workspace = true }

jni = { workspace = true }
