[package]
name = "mcre_fs"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true, optional = true }
dirs  = { workspace = true, optional = true }

indexed_db_futures = { workspace = true, features = ["serde"], optional = true }
js-sys             = { workspace = true, optional = true }

[features]
default = []
std = ["tokio", "dirs"]
web = ["indexed_db_futures", "js-sys"]
