[package]
name = "core_gen"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mcre_data = { workspace = true }

indexmap = { workspace = true }

tokio = { workspace = true }

syn          = { workspace = true }
quote        = { workspace = true }
proc-macro2  = { workspace = true }
convert_case = { workspace = true }
prettyplease = { workspace = true }
